<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.base.AccessActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/accessView"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:gravity="top|center"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/logo_splash"
                    android:transitionName="logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableRight="@drawable/ic_icon_password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/registerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:padding="8dp"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/registerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="Full Name*"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableRight="@drawable/ic_icon_password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableRight="@drawable/ic_icon_password"
                    android:hint="Confirm Password*"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="Email*"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="Confirm Email*"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="Phone Number*"
                    android:inputType="phone"
                    android:padding="7dp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/registerButton"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:padding="8dp"
                        android:text="Already registered?"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/loginTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:padding="8dp"
                        android:text="Login Here"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/navigation_bar" />
</android.support.v4.widget.DrawerLayout>
